--- a/FRONT/src/app/user-entrepot/user-entrepot.html
+++ b/FRONT/src/app/user-entrepot/user-entrepot.html
@@ -51,41 +51,41 @@
                     [class.active]="currentTab === 'enregistres'"
                     (click)="currentTab = 'enregistres'; applyFilters()">
                     Enregistrés
-                    <!-- <span class="tab-badge">{{ nbEnregistresByPeriod }}</span> -->
+                    <span class="tab-badge" *ngIf="nbEnregistres > 0">{{ nbEnregistres }}</span>
                 </button>
 
                  <button class="tab-btn" 
                     [class.active]="currentTab === 'attente'"
                     (click)="currentTab = 'attente'; applyFilters()">
                     En attente
-                    <!-- <span class="tab-badge" *ngIf="nbAttenteByPeriod > 0">{{ nbAttenteByPeriod }}</span> -->
+                    <span class="tab-badge" *ngIf="nbAttente > 0">{{ nbAttente }}</span>
                 </button>
 
                 <button class="tab-btn" 
                     [class.active]="currentTab === 'valides'"
                     (click)="currentTab = 'valides'; applyFilters()">
                     Validés
-                   <!-- <span class="tab-badge" *ngIf="nbValidesByPeriod > 0">{{ nbValidesByPeriod }}</span> -->
+                   <span class="tab-badge" *ngIf="nbValides > 0">{{ nbValides }}</span>
                 </button>
 
                  <button class="tab-btn" 
                     [class.active]="currentTab === 'refoules'"
                     (click)="currentTab = 'refoules'; applyFilters()">
                     Refoulés
-                    <!-- <span class="tab-badge" *ngIf="nbRefoulesByPeriod > 0">{{ nbRefoulesByPeriod }}</span> -->
+                    <span class="tab-badge" *ngIf="nbRefoules > 0">{{ nbRefoules }}</span>
                 </button>
 
                 <button class="tab-btn" 
                     [class.active]="currentTab === 'acceptes'"
                     (click)="currentTab = 'acceptes'; applyFilters()">
                     Acceptés
-                <!-- <span class="tab-badge" *ngIf="nbAcceptesByPeriod > 0">{{ nbAcceptesByPeriod }}</span> -->
+                <span class="tab-badge" *ngIf="nbAcceptes > 0">{{ nbAcceptes }}</span>
                 </button>
                  <button class="tab-btn" 
                     [class.active]="currentTab === 'historique'"
                     (click)="currentTab = 'historique'; applyFilters()">
                     Historique
-                    <!-- <span class="tab-badge">{{ historique.length }}</span> -->
+                    <span class="tab-badge" *ngIf="nbHistorique > 0">{{ nbHistorique }}</span>
                 </button>
             </div>
 
