--- a/FRONT/src/app/users-manager/users-manager.html
+++ b/FRONT/src/app/users-manager/users-manager.html
@@ -250,7 +250,7 @@
                     <select class="truck-select" [(ngModel)]="formUser.status" required>
                       <option value="Actif">Actif</option>
                       <option value="Inactif">Inactif</option>
-                      <option value="En attente">En attente</option>
+                      <!-- <option value="En attente">En attente</option> -->
                     </select>
                   </div>
                 </div>
