--- a/FRONT/src/app/historique/historique.scss
+++ b/FRONT/src/app/historique/historique.scss
@@ -140,6 +140,8 @@
             color: var(--text-secondary);
             opacity: 0.6;
             display: flex;
+            z-index: 10;
+            pointer-events: none;
         }
 
         input {
