--- a/FRONT/src/app/user-entrepot/user-entrepot.scss
+++ b/FRONT/src/app/user-entrepot/user-entrepot.scss
@@ -14,12 +14,43 @@
   margin-bottom: 1rem;
 }
 
+
 .search-and-filters {
   display: flex;
   align-items: center;
   gap: 1rem;
   flex: 1;
 }
+
+@media (max-width: 992px) {
+  .controls-area {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 1rem;
+  }
+
+  .search-and-filters {
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .search-box {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .filter-chip-wrap {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .calendar-wrapper {
+    width: 100%;
+  }
+}
+
 
 .search-box {
   position: relative;
